# AstraSim-FSW

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PROJECT_STATE.md  README.md  RELEASE_NOTES_v1.0.0.md  apply_docs_step.sh  resume_bullets.md
.github/workflows/: assurance.yml  full_verification.yml  pages.yml  performance.yml  unit_tests.yml
ci/: run_local_tests.sh
config/: assurance_assistant_eval.json  assurance_assistant_policy.json  protocol_manifest.json  traceability_baseline.json
docs/: ARCHITECTURE.md  ASSURANCE.md  DECISIONS.md  FDIR_MATRIX.md  PORTFOLIO_CASE_STUDY.md  PORTFOLIO_DEMO.md  REQUIREMENTS.md  RISKS_AND_BLOCKERS.md  VERIFICATION_MATRIX.csv  architecture.md  command_authorization.md  command_packet.md  command_processor.md  command_telemetry_demo.md  flight_software_app.md  health_monitor.md  hil_smoke_test.md  live_telemetry_demo.md  monte_carlo.md  pi_deployment.md  recovery_supervisor.md  requirements.md  scenario_runner.md  test_plan.md  udp_command_receiver.md  watchdog.md
evidence/: command_telemetry_demo.txt  ctest_results.txt  pi_command_telemetry_demo.txt  pi_ctest_results.txt
fsw/fuzz/: fuzz_command_packet.cpp
fsw/include/astra/: command_authorizer.hpp  command_packet.hpp  command_processor.hpp  configuration_service.hpp  event_logger.hpp  fdir_manager.hpp  flight_software_app.hpp  flight_software_executive.hpp  ground_command_guard.hpp  health_monitor.hpp  mode_manager.hpp  rate_group_scheduler.hpp  recovery_supervisor.hpp  telemetry_packet.hpp  udp_command_receiver.hpp  udp_telemetry_sender.hpp  watchdog.hpp
fsw/src/: command_authorizer.cpp  command_packet.cpp  command_processor.cpp  command_telemetry_demo.cpp  configuration_service.cpp  event_logger.cpp  fdir_manager.cpp  flight_software_app.cpp  flight_software_executive.cpp  ground_command_guard.cpp  health_monitor.cpp  main.cpp  mode_manager.cpp  rate_group_scheduler.cpp  recovery_supervisor.cpp  telemetry_demo.cpp  telemetry_packet.cpp  timing_campaign.cpp  udp_command_receiver.cpp  udp_telemetry_sender.cpp  watchdog.cpp
fsw/tests/: test_command_authorizer.cpp  test_command_packet.cpp  test_command_processor.cpp  test_configuration_service.cpp  test_event_integration.cpp  test_event_logger.cpp  test_extended_modes.cpp  test_fdir_manager.cpp  test_flight_software_app.cpp  test_flight_software_executive.cpp  test_ground_command_guard.cpp  test_health_monitor.cpp  test_mode_manager.cpp  test_rate_group_scheduler.cpp  test_recovery_supervisor.cpp  test_simultaneous_faults.cpp  test_telemetry_packet.cpp  test_udp_command_receiver.cpp  test_udp_telemetry_sender.cpp  test_watchdog.cpp
media/: pi_dashboard_snapshot.txt
reports/: ASTRA_OS_FINAL_COMPLETION_REPORT.md  ASTRA_OS_PI_HIL_PR_DESCRIPTION.md  ASTRA_OS_RASPBERRY_PI_VERIFICATION_REPORT.md  ASTRA_OS_V1_RELEASE_REPORT.md  assurance_assistant_eval.json  assurance_assistant_eval.md  command_telemetry_demo_output.txt  fdir_campaign_report.md  live_telemetry_demo_output.txt  monte_carlo_report.md  pi_deployment_package_report.md  python_tool_tests.json  requirement_check_report.md  results_summary.md  scenario_basic_command_fault_output.txt  scenario_command_timestamp_guard_output.txt  scenario_extended_modes_output.txt  scenario_fdir_command_bad_crc_output.txt  scenario_fdir_command_timeout_output.txt  scenario_fdir_command_unknown_id_output.txt  scenario_fdir_cpu_overload_output.txt  scenario_fdir_memory_overload_output.txt  scenario_fdir_payload_heartbeat_timeout_output.txt  scenario_fdir_sensor_invalid_data_output.txt  scenario_fdir_sensor_timeout_output.txt  scenario_fdir_telemetry_socket_failure_output.txt  scenario_fdir_watchdog_deadline_miss_output.txt  scenario_hil_smoke_test_output.txt  scenario_invalid_transition_rejected_output.txt  scenario_recovery_failure_failsafe_output.txt  scenario_sensor_timeout_safe_mode_output.txt  scenario_watchdog_timeout_safe_mode_output.txt
reports/latest/: assurance_summary.json  baseline_manifest.json  protocol_conformance.json
reports/pi-hil/: controlled-overrun-resource-usage.json  controlled-overrun-resource-usage.txt  controlled-overrun-timing.json  final-ctest.txt  nominal-resource-usage.json  nominal-resource-usage.txt  nominal-timing.json  soak-resource-usage.json  soak-resource-usage.txt  soak-timing.json
scenarios/: basic_command_fault.yaml  command_timestamp_guard.yaml  extended_modes.yaml  hil_smoke_test.yaml  invalid_transition_rejected.yaml  recovery_failure_failsafe.yaml  sensor_timeout_safe_mode.yaml  watchdog_timeout_safe_mode.yaml
site/: 404.html  app.js  index.html  model.json  styles.css
tools/: assurance_assistant.py  check_protocol_conformance.py  check_requirements.py  check_source_cleanliness.py  generate_assurance_assistant_eval.py  generate_baseline_manifest.py  generate_command_fuzz_corpus.py  generate_results_plots.py  package_pi_deployment.sh  repository_state.py  run_all_scenarios.py  run_assurance_assistant_eval.py  run_astra_os_assurance.py  run_command_telemetry_demo.sh  run_controlled_mutation.py  run_fdir_campaign.py  run_hil_smoke_test.py  run_live_telemetry_demo.sh  run_monte_carlo.py  run_scenario.py  send_command.py  summarize_lcov.py  telemetry_dashboard.py  telemetry_receiver.py  traceability_baseline.py  update_traceability_baseline.py  validate_timing_evidence.py
tools/tests/: test_assurance_assistant.py  test_command_timestamps.py  test_monte_carlo_timeout.py  test_repository_state.py  test_summarize_lcov.py  test_traceability.py  test_web_model.py
